[package]
name = "compass-edu-api"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false # Disable doctest for the library since README.md has examples and we don't want to run them

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
reqwest = { version = "0.12.12", features = ["cookies", "gzip", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
url = "2.5.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
dotenvy = "0.15.7"
